- GH #4164: [Bug] SharedLibraryImpl::loadImpl uses an incorrect format specifier
- GH #4173: AbstractConfiguration: when expanding property references, allow specifying a default value
- GH #4174: AbstractConfiguration: support Int16/UInt16 and Int32/UInt32
- GH #4182: Util: Make load()/save()/clear() operations on configurations thread-safe


Release 1.11.7 (2023-07-11)
===========================

- GH #4023: CPPParser: Losing data if parameter std::function<void(bool)> is used
- GH #4031: Classes with virtual functions missing virtual destructors (compilation issues)
- GH #4014: wrong string offset in HTTPCredentials::isNTLMCredentials
- GH #4071: PageCompiler: add referrerPolicy to page directive
- GH #4077: OpenSSL 3: Don't throw if legacy provider is not available
- GH #4078: Upgrade bundled SQLite to 3.42
- GH #4079: SocketConnector: constructor should take SocketAddress by const reference
- GH #4082: Logger performance improvement with formatting


Release 1.11.6 (2022-12-08)
===========================

- GH #3147: Reading from request stream hangs when "Transfer-Encoding: chunked" is used
- GH #3859: zlib headers not updated
- GH #3876: Replace sprintf with snprintf in Environment and NumberFormatter to avoid deprecation warnings
- Build system improvements for Xcode on Apple Silicon.
- Upgrade bundled SQLite to 3.40.0


Release 1.11.5 (2022-10-31)
===========================

- GH #3849: Upgrade bundled libexpat to 2.5.0 [fixes CVE]


Release 1.11.4 (2022-10-24)
===========================

- GH #3805: Upgrade expat to 2.4.9
- GH #3846: Upgrade bundled zlib to 1.2.13 [fixes CVE]
- GH #3847: Upgrade bundled SQLite to 3.39.4


Release 1.11.3 (2022-06-12)
===========================

- GH #3567: fix(openssl-initializer): check legacy provider existence for legacy exception
- GH #3587: MySQL UUID binding temporary string
- GH #3632: Redis - add TLS support
- updated a few copyright dates


Release 1.11.2 (2022-04-16)
===========================
